sumo/tests/sumo/pedestrian_model/striping/errors/disconnected_route/errors.sumo
Warning: No connection between edge ':C_w1' and edge 'CW_bwd_connector' found.
Warning: Pedestrian 'p0' could not find route across junction 'C', time=8.00.
Error: Disconnected walk for person 'p0'.
Quitting (on error).
